Fix line break on some device sizes
On some smartphones in landscape mode, the name would break to two lines
and mess up the alignment of the text with the image. This commit makes
the font smaller in those sizes, so the line is not too wide for the
space.

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@ body {
 }
 .name {
     margin-bottom: 0;
+    font-size: 4rem;
 }
 .photo {
     -moz-box-sizing: border-box;
@@ -53,6 +54,10 @@ body {
 @media (min-width: 750px) {
     .text-holder {
         padding-top: 1.5rem;
+    }
+
+    .name {
+        font-size: 5rem;
     }
 }
 
